tests/fixtures/pass/array_index_raw_pointer.sali
let main(): i32 = {
  let mut values = [40, 2]
  let pointer = MutPtr(mut borrow values[1])
  let second = unsafe do {
    *pointer
  }
  values[0] + second
}
